--- a/src/app/components/secondbrain/setup/secondbrain.setup.component.html
+++ b/src/app/components/secondbrain/setup/secondbrain.setup.component.html
@@ -1,1 +1,21 @@
+
 setup
+<!-- 
+1. embedId 유효성 체크를 위해서 embedId저장 시 서버에도 저장 => 이번에는 여기까지만
+
+-------------------------------------------------------------------------------------------
+
+>> 연결 관리
+>> 이 화면 보여주기 위해서 embedId 유효성 체크  
+
+---
+
+이미 연결된 상태
+=> 연결 상태 확인 시 embedId 체크 - 서버와 비교 => 서버에서 삭제 하면 embedId있어도 동작안함
+
+
+내 연결정보
+userId/{userId}/integration/secondbrain/embed/{embedId}/정보 
+
+정보 -> 접속환경 / 마지막 접속 시간??
+접속 끊기  -->
