기존 컨셉 프롬프트(번경전)

--- a/src/app/components/secondbrain/view/secondbrain.view.component.html
+++ b/src/app/components/secondbrain/view/secondbrain.view.component.html
@@ -68,7 +68,7 @@
           • 여러 장치에서 이용할 수 있으며, 각 장치에서는 최초 1회 인증이 필요합니다.<br/>
           • 첫 API 연결은 데스크톱 환경에서만 진행할 수 있습니다.<br/>
           • 구매 시 등록한 이메일이 기억나지 않는 경우, 현재 사용 중인 이메일로 먼저 인증 후 변경하실 수 있습니다.
-          • API 연결과 이용에 대한 문의는 <strong>toto791@gmail.com</strong> 으로 해주세요.
+          • API 연결과 이용에 대한 문의는 <strong>toto791&#64;gmail.com</strong> 으로 해주세요.
         </small>
       </div>
     </ng-container>
