--- a/src/app/components/secondbrain/view/secondbrain.view.component.html
+++ b/src/app/components/secondbrain/view/secondbrain.view.component.html
@@ -228,7 +228,7 @@
 
     <!-- 그래프 영역 -->
     <div class="graph-wrapper" [class.inactive]="state !== 'graph'">
-      <ng-container *ngIf="state=='graph'">
+      <!-- <ng-container *ngIf="state=='graph'">
         <div class="input-group" style="display:flex; gap: 8px; padding: 0 16px;font-size: 14px;">
           <button class="connect-btn" (click)="onClickgenerateNotionNoteKMDataBatch()">
             generateNotionNoteKMDataBatch
@@ -239,7 +239,7 @@
             generateNoteConcepts
           </button>
         </div>
-    </ng-container>
+      </ng-container> -->
       <div class="graph-container" #graphContainer>
       </div>
 
@@ -259,12 +259,27 @@
           </span>
           <span class="menu-text">설정</span>
         </button> -->
+        <!-- 노트-키워드 그래프 -->
+
+        <button class="menu-item" (click)="loadGraph('note-keyword')">
+          <span class="menu-icon">
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M17.8321 9.5547C18.1384 9.09517 18.0142 8.4743 17.5547 8.16795C17.0952 7.8616 16.4743 7.98577 16.168 8.4453L13.3925 12.6085L10.0529 10.3542C9.421 9.92768 8.55941 10.1339 8.18917 10.8004L6.12584 14.5144C5.85763 14.9971 6.03157 15.6059 6.51436 15.8742C6.99714 16.1424 7.60594 15.9684 7.87416 15.4856L9.56672 12.439L12.8571 14.66C13.4546 15.0634 14.2662 14.9035 14.6661 14.3036L17.8321 9.5547Z" fill="#cfd0d3"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M7 2C4.23858 2 2 4.23858 2 7V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V7C22 4.23858 19.7614 2 17 2H7ZM4 7C4 5.34315 5.34315 4 7 4H17C18.6569 4 20 5.34315 20 7V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7Z" fill="#cfd0d3"></path> </g></svg>
+          </span>
+          <span class="menu-text">노트-키워드 그래프</span>
+        </button>
+
+        <button class="menu-item" (click)="loadGraph('keyword-only')">
+          <span class="menu-icon">
+             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M17.8321 9.5547C18.1384 9.09517 18.0142 8.4743 17.5547 8.16795C17.0952 7.8616 16.4743 7.98577 16.168 8.4453L13.3925 12.6085L10.0529 10.3542C9.421 9.92768 8.55941 10.1339 8.18917 10.8004L6.12584 14.5144C5.85763 14.9971 6.03157 15.6059 6.51436 15.8742C6.99714 16.1424 7.60594 15.9684 7.87416 15.4856L9.56672 12.439L12.8571 14.66C13.4546 15.0634 14.2662 14.9035 14.6661 14.3036L17.8321 9.5547Z" fill="#cfd0d3"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M7 2C4.23858 2 2 4.23858 2 7V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V7C22 4.23858 19.7614 2 17 2H7ZM4 7C4 5.34315 5.34315 4 7 4H17C18.6569 4 20 5.34315 20 7V17C20 18.6569 18.6569 20 17 20H7C5.34315 20 4 18.6569 4 17V7Z" fill="#cfd0d3"></path> </g></svg>
+           </span>
+          <span class="menu-text">키워드 그래프</span>
+        </button>
 
         <!-- 연결 끊기 -->
         <button class="menu-item danger" (click)="onClickDisconnect()">
           <span class="menu-icon">
             <!-- 연결 끊기 아이콘 (SVG 그대로) -->
-            <svg viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 36 36" width="32px" height="32px"  xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M12.17,6A6.21,6.21,0,0,0,6,11H2.13v2H6a6.23,6.23,0,0,0,6.21,5H17V6ZM15.1,16H12.17a4.2,4.2,0,0,1-4.31-4,4.17,4.17,0,0,1,4.31-4H15.1Z"
                 fill="#cfd0d3" />
